--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset='UTF-8'>
-<title>Sample website using Bootstrap and ExpressJS</title>
+<title>TitanNotes Website</title>
 
 <!---CDN Links-->
 <script
